Style: Fix clipboard icon border in dark mode

--- a/src/assets/dark-mode.css
+++ b/src/assets/dark-mode.css
@@ -95,7 +95,6 @@ body.dark .icon,
 body.dark g {
   color: #bbb !important;
   fill: #bbb !important;
-  stroke: #bbb !important;
 }
 
 body.dark input,
